--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body{
     background-color: rgba(37, 29, 26, 1);
-    height: 22000px;
+    /* height: 22000px; */
 }
 .container{
     margin: 0 auto;
