--- a/style.css
+++ b/style.css
@@ -22,12 +22,13 @@ nav{
     }
     nav.black{
     background: rgba(0,0,0,0.8);
-    height: 80px;
-    padding: 10px 50px;
+    /* height: 80px;     */
+    /* padding: 10px; */
+
 
 }
 .nav__content{
-    padding: 36px;
+    /* padding: 20px; */
     display: flex;
     justify-content: space-between;
 }
@@ -35,6 +36,9 @@ nav{
     display: flex;
     align-items: center;
     gap: 18px;
+}
+.first a{
+    text-decoration: none;
 }
 .first i{
     background-color: rgba(255, 110, 64, 1);
@@ -92,12 +96,13 @@ color: rgba(239, 231, 226, 1);
     align-items: center;
     gap: 15px;
 }
-.right .bir{
+.right .bir a{
     color: rgba(255, 255, 255, 1);
 font-size: 18px;
 font-weight: 400;
 line-height: 27px;
 letter-spacing: 0em;
+text-decoration: none;
 
 
 }
@@ -460,5 +465,17 @@ cursor: pointer;
 .check p a{
     color: rgba(239, 231, 226, 1);
 
+}
+.map{
+    margin-top: 140px;
+    padding: 250px;
+    background-image: url("./img/map__img.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.black{
+    background-color: rgba(37, 29, 26, 1);
+    padding: 64px 57px;
 }
 
