--- a/registratsiya/style.css
+++ b/registratsiya/style.css
@@ -32,6 +32,7 @@ body {
   overflow: hidden;
 }
 
+
 .form
   header {
   font-size: 30px;
@@ -39,6 +40,7 @@ body {
   color: #fff;
   font-weight: 500;
   cursor: pointer;
+  
 }
 
 .wrapper
@@ -47,6 +49,10 @@ body {
   flex-direction: column;
   gap: 20px;
   margin-top: 40px;
+  border: 1px dashed #7B61FF;
+border-radius: 5px;
+padding: 20px;
+
 }
 form
   input {
