--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ nav{
     left: 0;
     top: 0;
     width: 100%;
+    z-index: 5;
     }
     nav.black{
     background: rgba(0,0,0,0.8);
@@ -43,12 +44,13 @@ nav{
 .first i{
     background-color: rgba(255, 110, 64, 1);
 }
-.first h1{
+.first  h1{
     color: #fff;
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 24px;
-        letter-spacing: 0em;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0em;
+    
 
 }
 .ahref{
@@ -71,7 +73,10 @@ nav{
     align-items: center;
     gap: 15px;
 }
-.left p{
+.left a{
+    text-decoration: none;
+}
+.left  p{
 font-size: 14px;
 font-weight: 400;
 line-height: 19px;
@@ -346,10 +351,7 @@ footer ul{
 
 
 }
-footer ul li{
-    /* border: 1px solid red;    */
 
-}
 footer ul li h1{
 font-size: 30px;
 font-weight: 500;
@@ -474,8 +476,85 @@ cursor: pointer;
     background-repeat: no-repeat;
     background-size: cover;
 }
-.black{
+.block{
+    width: 480px;
     background-color: rgba(37, 29, 26, 1);
     padding: 64px 57px;
 }
+.block h1{
+font-size: 48px;
+font-weight: 700;
+line-height: 60px;
+letter-spacing: 0px;
+color: #fff;
+margin-bottom: 35px;
+}
+.white{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin-bottom: 25px;
+}
+.white input{
+    border: none;
+    background: none;
+font-size: 21px;
+font-weight: 400;
+line-height: 30px;
+letter-spacing: 0em;
+color: #fff;
+}
+.white input::placeholder{
+    border: none;
+    background: none;
+font-size: 21px;
+font-weight: 400;
+line-height: 30px;
+letter-spacing: 0em;
+color: #fff;
+}
+.white a{
+font-size: 21px;
+font-weight: 400;
+line-height: 30px;
+letter-spacing: 0em;
+color: #fff;
+text-decoration: none;
+}
+.white p{
+font-size: 21px;
+font-weight: 400;
+line-height: 30px;
+letter-spacing: 0em;
+color: #fff;
+}
+.white .circle{
+    width: 54px;
+    height: 54px;
+    border-radius: 50%;
+    background-color: rgba(255, 110, 64, 1);
+    position: relative;
+}
+.white .circle .vb{
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    margin: 15px;
+    
 
+}
+.white .circle .xt{
+    margin: 16px;
+    position: absolute;
+}
+.white .circle .lt{
+    position: absolute;
+    margin: 10px 9px;
+
+    width: 33px;
+    height: 25px;
+}
+.white .circle .st{
+    margin: 14px;
+    position: absolute;
+}
